--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2004-01-18  Richard Sandiford  <rsandifo@redhat.com>
+
+	PR target/7618
+	* config/mips/mips.c: Include cfglayout.h.
+	(TARGET_ASM_OUTPUT_MI_THUNK, TARGET_ASM_CAN_OUTPUT_MI_THUNK): Define.
+	(mips_unspec_offset_high): Add temporary register argument.
+	(mips_load_call_address): New function, split out from...
+	(mips_expand_call): ...here.
+	(mips_output_cplocal): New function.
+	(mips_output_function_prologue, mips_output_function_epilogue): Use it.
+	(mips_emit_loadgp): New function, split out from...
+	(mips_expand_prologue): ...here.
+	(mips_output_mi_thunk): New function.
+
 2004-01-17  Roger Sayle  <roger@eyesopen.com>
 
 	* builtins.c (expand_builtin_expect_jump): Fix mistake in my
