--- a/gcc-3_4-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_4-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-18  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/basic_string.tcc (_M_clone): Null-terminate.
+	* testsuite/21_strings/basic_string/element_access/char/4.cc: New.
+	* testsuite/21_strings/basic_string/element_access/wchar_t/4.cc:
+	Ditto.
+
 2004-01-16  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* testsuite/testsuite_hooks.cc (try_mkfifo): Avoid calling
