--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-18  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* doc/c-tree.texi, doc/cpp.texi, doc/extend.texi,
+	doc/frontends.texi, doc/gcov.texi, doc/gty.texi, doc/install.texi,
+	doc/invoke.texi, doc/libgcc.texi, doc/md.texi, doc/rtl.texi,
+	doc/sourcebuild.texi, doc/standards.texi, doc/tm.texi,
+	doc/trouble.texi: Remove trailing whitespace.
+
 2004-01-18  Richard Sandiford  <rsandifo@redhat.com>
 
 	PR target/7618
