--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-16  Jason Merrill  <jason@redhat.com>
+
+	PR c++/11725
+	* except.c (build_throw): In a template, set
+	current_function_returns_abnormally.
+
 2004-01-17  Fred Fish  <fnf@intrinsity.com>
 
 	PR c++/11895
