--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-18  James A. Morrison  <ja2morri@uwaterloo.ca>
+
+	* MAINTAINERS: Add myself to write-after-approval.
+	
 2004-01-17  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	* MAINTAINERS: Remove entries without email address.
