--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2004-01-18  Jan Hubicka  <jh@suse.cz>
+
+	* basic-block.h (try_redirect_by_replacing_jump): Declare.
+	* cfgcleanup.c (try_optimize_cfg): Use it.
+	* cfgrtl.c (try_redirect_by_replacing_jump): Export.
+	(rtl_redirect_edge_and_branch, cfg_layout_redirect_edge_and_branch):
+	Kill hack.
+	(cfg_layout_merge_blocks): Use try_redirect_by_replacing_jump.
+
+	Revert:
+	2004-01-16  Geoffrey Keating  <geoffk@apple.com>
+
+		* cfgrtl.c (try_redirect_by_replacing_jump): Optimize tablejumps
+		even after reload, just don't remove the actual jump tables.
+
 2004-01-18  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/rs6000/rs6000.h (STRICT_ARGUMENT_NAMING): Remove.
