--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-19  Steven Bosscher  <stevenb@suse.de>
+
+	* gengtype.c (header_file): Make it static.
+	(write_types_process_field, write_enum_defn): Minor whitespace fixes.
+	* gengtype.h (header_file): No longer extern.
+
 2004-01-18  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* defaults.h (CASE_VECTOR_PC_RELATIVE): Provide the default.
@@ -331,11 +337,11 @@
 
 2004-01-16  Jan Hubicka  <jh@suse.cz>
 
-        PR opt/11350
-        * cfgcleanup.c (try_optimize_cfg): Suppress tablejump removal
+	PR opt/11350
+	* cfgcleanup.c (try_optimize_cfg): Suppress tablejump removal
 	after reload.
-        * cfgrtl.c (rtl_can_merge_blocks, cfglayout_can_merge_blocks,
-        rtl_try_redirect_by_replacing_branch): Likewise.
+	* cfgrtl.c (rtl_can_merge_blocks, cfglayout_can_merge_blocks,
+	rtl_try_redirect_by_replacing_branch): Likewise.
 
 2004-01-15  Geoffrey Keating  <geoffk@apple.com>
 
