--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-16  Kim Ho  <kho@redhat.com>
+
+        * gnu/java/awt/peer/gtk/GtkFileDialogPeer.java
+        (gtkWidgetGetDimensions): Remove.
+        * jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
+        (gtkWidgetGetDimensions): Remove.
+
 2004-01-16  Tom Tromey  <tromey@redhat.com>
 
 	* java/awt/Container.java: Typo and indentation fixes.
