--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Fernando Nasser  <fnasser@redhat.com>
+
+	* java/awt/EventQueue.java (getCurrentEvent): Consider that system
+	events may be handled by any queue in the stack.
+
 2004-01-19  Kim Ho  <kho@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GtkFramePeer.java (getMenuBarHeight): Added
