--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-19  Paolo Carlini  <pcarlini@suse.de>
+
+	* MAINTAINERS: Update my email address.
+
 2004-01-18  James A. Morrison  <ja2morri@uwaterloo.ca>
 
 	* MAINTAINERS: Add myself to write-after-approval.
