--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Roger Sayle  <roger@eyesopen.com>
+
+	* config/i386/i386.md (*movhi_1, *movqi_1): When optimizing for
+	size, don't use the larger zero-extending loads.
+
 2004-01-19  Richard Henderson  <rth@redhat.com>
 
 	* alpha.h (HARD_REGNO_MODE_OK): Disallow SImode in FP regs.
