--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Jeff Law  <law@redhat.com>
+
+	* contrib.texi: Update Paolo Carlini's entry.  New entries for
+	Jerry Quinn and Petur Runolfsson.
+ 
 2004-01-19  Roger Sayle  <roger@eyesopen.com>
 
 	* config/i386/i386.md (*movhi_1, *movqi_1): When optimizing for
