--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-19  Fernando Nasser  <fnasser@redhat.com>
 
+	* java/awt/EventQueue.java (invokeAndWait): Use list-aware
+	isDispatchThread method to replace wrong test condition.
+
+2004-01-19  Fernando Nasser  <fnasser@redhat.com>
+
 	* java/awt/EventQueue.java (pop): Prevent racing condition to add
 	events to the queue out of order by acquiring locks in the proper
 	order and not by releasing one before acquiring the other.
