--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Kim Ho  <kho@redhat.com>
+
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
+	(connectJObject): Iterate through the vbox's children to find layout.
+
 2004-01-19  Fernando Nasser  <fnasser@redhat.com>
 
 	* java/awt/EventQueue.java (invokeAndWait): Use list-aware
