--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-19  Matthias Klose  <doko@debian.org>
+
+	* libtool-version: Increased `current' to 6.
+
 2004-01-19  Kim Ho  <kho@redhat.com>
 
 	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
