--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13592
+	* g++.dg/template/call2.C: New test.
+
 2004-01-19  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/compat/fnptr-by-value-1_x.c, scalar-by-value-1_y.c
