--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-20  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR target/13557
+	* config/sparc/sparc.c (function_arg): Reorder the cases.
+
 2004-01-19  Per Bothner  <per@bothner.com>
 
 	Move cpp_reader's line_maps field to a shared global.
