--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-20  Hartmut Penner  <hpenner@de.ibm.com>
+
+	* gcc.dg/ppc64-abi-2.c: New test.
+
 2004-01-18  James A. Morrison  <ja2morri@uwaterloo.ca>
 
         * lib/treelang.exp: Fill out this file.
