--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-20  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.c (mips_load_call_address): Make the call insn
+	use $gp if it could be calling a lazy binding stub.
+
 2004-01-20  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/s390/s390.c (TARGET_PROMOTE_FUNCTION_ARGS): Define.
