--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-20  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* gnu/java/awt/peer/gtk/GtkFramePeer.java (setResizable):
+	Override GtkWindowPeer's setResizable method to account for menu
+	bar height when setting the frame's size.
+
 2004-01-19  Matthias Klose  <doko@debian.org>
 
 	* libtool-version: Increased `current' to 6.
