--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* Makefile.am (lib_org_w3c_dom_la_LIBADD,
+	lib_org_w3c_dom_la_LDFLAGS): New.
+	(lib_org_xml_sax_la_LIBADD, lib_org_xml_sax_la_LDFLAGS): New.
+	* Makefile.in: Rebuilt.
+
 2004-01-20  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (setBounds):
