--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,17 @@
 2004-01-20  Jan Hubicka  <jh@suse.cz>
 
+	* varray.c:  Include hashtab.h
+	(varray_descriptor): New structure.
+	(hash_descriptor, eq_descriptor, varray_descriptor,
+	print_statistics): New static functions
+	(varray_init, varray_grow): Update statistics
+	(dump_varray_statistics): New function.
+	* varray.h (dump_varray_statistics): Declare.
+	* toplev.c (finalize): Call it.
+	* Makefile.in (varray.o): Add dependency.
+
+2004-01-20  Jan Hubicka  <jh@suse.cz>
+
 	* cselib.c: Include alloc-pool.h
 	(empty_vals, empty_elt_lists, empty_elt_loc_lists): Kill.
 	(elt_loc_list_pool, elt_list_pool, cselib_val_pool): Declare.
