--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-21  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/sysv4.h (DWARF2_FRAME_REG_OUT): Define.
+	* dwarf2out.c (output_cfi): Map regs using DWARF2_FRAME_REG_OUT.
+	* doc/tm.texi (DWARF_FRAME_REGNUM, DWARF2_FRAME_REG_OUT): Document.
+
 2004-01-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* pa-protos.h (compute_frame_size): Use HOST_WIDE_INT for frame sizes.
