--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-20  Kelley Cook  <kcook@gcc.gnu.org>
 
+	* Make-lang.in: Replace $(docdir) with doc.
+	(java.info, java.srcinfo, java.man, java.srcman): New rules.
+	(java.install-man): Revamp rule.
+	
+2004-01-20  Kelley Cook  <kcook@gcc.gnu.org>
+
 	* Make-lang.in (JAVA_INSTALL_NAME, JAVA_TARGET_INSTALL_NAME, 
 	GCJH_TARGET_INSTALL_NAME): Define via a immediate $(shell) 
 	instead of deferred backquote.
