--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-20  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* gcc_release (build_sources): Delete call to make f77.rebuilt.
+
 2004-01-17  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* snapshot-README: Mention how the snapshot was generated.
