--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (pretty-print.o): Depend on $(CONFIG_H) and
+	$(SYSTEM_H).
+	(print-rtl1.o): Depend on $(SYSTEM_H).
+
 2004-01-20  Kelley Cook  <kcook@gcc.gnu.org>
 
 	PR bootstrap/12730
